--- a/cloud/requirements.txt
+++ b/cloud/requirements.txt
@@ -1,7 +1,8 @@
+asgiref==3.2.3
 astroid==2.3.2
-Django==2.2.6
+Django==3.0
 django-rest-auth==0.9.5
-django-timezone-field==3.1
+django-timezone-field==4.0
 djangorestframework==3.10.3
 isort==4.3.21
 lazy-object-proxy==1.4.3
