--- a/client_web/package.json
+++ b/client_web/package.json
@@ -23,6 +23,7 @@
     "@babel/preset-env": "^7.8.3",
     "@babel/preset-react": "^7.8.3",
     "babel-loader": "^8.0.6",
+    "copy-webpack-plugin": "^5.1.1",
     "html-loader": "^0.5.5",
     "html-webpack-loader": "0.0.5",
     "html-webpack-plugin": "^3.2.0",
@@ -32,7 +33,10 @@
     "webpack-dev-server": "^3.10.1"
   },
   "dependencies": {
+    "bootstrap": "^4.4.1",
     "react": "^16.12.0",
-    "react-dom": "^16.12.0"
+    "react-bootstrap": "^1.0.0-beta.16",
+    "react-dom": "^16.12.0",
+    "react-router-dom": "^5.1.2"
   }
 }
