--- a/client_web/package.json
+++ b/client_web/package.json
@@ -28,6 +28,10 @@
     "html-webpack-loader": "0.0.5",
     "html-webpack-plugin": "^3.2.0",
     "prop-types": "^15.7.2",
+    "react-redux": "^7.1.3",
+    "react-router": "^5.1.2",
+    "react-router-bootstrap": "^0.25.0",
+    "redux": "^4.0.5",
     "webpack": "^4.41.5",
     "webpack-cli": "^3.3.10",
     "webpack-dev-server": "^3.10.1"
