--- a/client_web/package.json
+++ b/client_web/package.json
@@ -22,22 +22,29 @@
     "@babel/core": "^7.8.3",
     "@babel/preset-env": "^7.8.3",
     "@babel/preset-react": "^7.8.3",
+    "autoprefixer": "^9.7.4",
     "babel-loader": "^8.0.6",
+    "bootstrap": "^4.4.1",
     "copy-webpack-plugin": "^5.1.1",
+    "css-loader": "^3.4.2",
     "html-loader": "^0.5.5",
     "html-webpack-loader": "0.0.5",
     "html-webpack-plugin": "^3.2.0",
+    "jquery": "^3.4.1",
+    "node-sass": "^4.13.1",
+    "postcss-loader": "^3.0.0",
     "prop-types": "^15.7.2",
     "react-redux": "^7.1.3",
     "react-router": "^5.1.2",
     "react-router-bootstrap": "^0.25.0",
     "redux": "^4.0.5",
+    "sass-loader": "^8.0.2",
+    "style-loader": "^1.1.3",
     "webpack": "^4.41.5",
     "webpack-cli": "^3.3.10",
     "webpack-dev-server": "^3.10.1"
   },
   "dependencies": {
-    "bootstrap": "^4.4.1",
     "react": "^16.12.0",
     "react-bootstrap": "^1.0.0-beta.16",
     "react-dom": "^16.12.0",
