--- a/cloud/requirements.txt
+++ b/cloud/requirements.txt
@@ -1,12 +1,14 @@
 asgiref==3.2.3
 astroid==2.3.2
 Django==3.0.3
+django-cors-headers==3.2.1
 django-rest-auth==0.9.5
 django-timezone-field==4.0
 djangorestframework==3.11.0
 isort==4.3.21
 lazy-object-proxy==1.4.3
 mccabe==0.6.1
+Pillow==7.0.0
 pylint==2.4.3
 pytz==2019.3
 six==1.12.0
